--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="resize-grid">
+        <label for="size">Resize the grid: </label>
+        <input name="size" type="number">
+        <button id="resize-btn">Resize</button>
+    </div>
     <div class="grid-container">
     </div>
     <script src="script.js"></script>
