--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <label for="size">Resize the grid: </label>
         <input name="size" type="number">
         <button id="resize-btn">Resize</button>
+        <button id="clear-btn">Clear</button>
     </div>
     <div class="grid-container">
     </div>
