Add colorfull mode html and css

--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
         <input id="size" value="64" min="1" max="100" type="number">
         <button id="resize-btn">Resize</button>
         <button id="clear-btn">Clear</button>
+        <span id="radio-text">Colorfull mode:</span>
+        <input type="radio" id="on" name="colorfull-mode" value="on">
+        <label for="on">On</label>
+        <input type="radio" id="off" name="colorfull-mode" value="off" checked>
+        <label for="off">Off</label>
     </div>
     <div class="grid-container">
     </div>
