Implement colorfull mode funcionality

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
         <button id="resize-btn">Resize</button>
         <button id="clear-btn">Clear</button>
         <span id="radio-text">Colorfull mode:</span>
-        <input type="radio" id="on" name="colorfull-mode" value="on">
+        <input type="radio" id="on" class="colorfull-mode" name="colorfull-mode" value="1">
         <label for="on">On</label>
-        <input type="radio" id="off" name="colorfull-mode" value="off" checked>
+        <input type="radio" id="off" class="colorfull-mode" name="colorfull-mode" value="0" checked>
         <label for="off">Off</label>
     </div>
     <div class="grid-container">
