--- a/index.html
+++ b/index.html
@@ -7,17 +7,20 @@
     <title>Etch-a-Sketch</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body style="background-color: aliceblue;">
+<body style="background-color: rgb(208, 230, 250);">
     <div class="resize-grid">
         <label for="size">Resize the grid: </label>
         <input id="size" value="64" min="1" max="100" type="number">
         <button id="resize-btn">Resize</button>
         <button id="clear-btn">Clear</button>
-        <span id="radio-text">Colorfull mode:</span>
-        <input type="radio" id="on" class="colorfull-mode" name="colorfull-mode" value="1">
-        <label for="on">On</label>
-        <input type="radio" id="off" class="colorfull-mode" name="colorfull-mode" value="0" checked>
-        <label for="off">Off</label>
+        <br>
+        <div class="color-div">
+            <span id="radio-text">Colorfull mode:</span>
+            <input type="radio" id="on" class="colorfull-mode" name="colorfull-mode" value="1">
+            <label for="on">On</label>
+            <input type="radio" id="off" class="colorfull-mode" name="colorfull-mode" value="0" checked>
+            <label for="off">Off</label>
+        </div>
     </div>
     <div class="grid-container">
     </div>
