--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
         <button id="clear-btn">Clear</button>
         <br>
         <div class="color-div">
-            <span id="radio-text">Colorfull mode:</span>
-            <input type="radio" id="on" class="colorfull-mode" name="colorfull-mode" value="1">
+            <span id="radio-text">Colorful mode:</span>
+            <input type="radio" id="on" class="colorful-mode" name="colorful-mode" value="1">
             <label for="on">On</label>
-            <input type="radio" id="off" class="colorfull-mode" name="colorfull-mode" value="0" checked>
+            <input type="radio" id="off" class="colorful-mode" name="colorful-mode" value="0" checked>
             <label for="off">Off</label>
         </div>
     </div>
